Refactor DeferredLintHandler to handle warnings generated during parsing.